# awesomecalculator

.github/workflows/: build-pipeline.yml
src/: pyproject.toml
