[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awesomecalculator-henil"     # unique on TestPyPI
version = "1.0.0"
description = "Awesome calculator demo package"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Henil Jariwala" }]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["calculator*"]
